src/main/java/com/example/currency/error/ResourceAlreadyExistsException.java
package com.example.currency.error;

public class ResourceAlreadyExistsException extends RuntimeException {
    public ResourceAlreadyExistsException(String message) {
        super(message);
    }
}